# mlx-catalyst

./: .gitignore  LICENSE.md  README.md  devnotes.txt  pyproject.toml  requirements.txt  setup.py
docs/: init.md
examples/cifar10/: main_catalyst.py
examples/mnist/: main.py  main_catalyst.py
mlx_catalyst/data/: __init__.py  dataloader.py
mlx_catalyst/engine/: __init__.py  engine.py  evaluator.py  trainer.py
mlx_catalyst/loggers/: __init__.py  logger.py  wandblogger.py
mlx_catalyst/metrics/: __init__.py  metric.py
tests/: test_engine.py
